--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
+    "server-dev": "nodemon server/index.js",
+    "start": "webpack -d | node server/index.js"
   },
   "author": "Beth Johnson",
   "license": "ISC",
@@ -24,5 +25,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "request": "^2.81.0"
+  },
+  "engines": {
+  "node": "10.x"
   }
 }
