--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "server-dev": "nodemon server/index.js",
-    "start": "webpack -d | node server/index.js"
+    "start": "node server/index.js",
+    "heroku-postbuild":"webpack -p"
   },
   "author": "Beth Johnson",
   "license": "ISC",
@@ -27,6 +28,6 @@
     "request": "^2.81.0"
   },
   "engines": {
-  "node": "10.x"
+    "node": "10.x"
   }
 }
